--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,7 +1,11 @@
 [pytest]
 
 DJANGO_SETTINGS_MODULE = app.settings
-addopts = --verbosity=3 --no-migrations --create-db -p no:cacheprovider
+addopts =
+    --verbosity=3
+    --no-migrations
+    --create-db
+    -p no:cacheprovider
 filterwarnings =
      ignore::DeprecationWarning
 
